@@ -1,10 +1,10 @@
 // Copyright 2017 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.model.container.http;
 
-import com.google.common.collect.ImmutableList;
 import com.yahoo.component.ComponentId;
 import com.yahoo.component.ComponentSpecification;
 import com.yahoo.config.application.api.DeployLogger;
+import com.yahoo.vespa.model.container.ApplicationContainerCluster;
 import com.yahoo.vespa.model.container.ContainerCluster;
 import com.yahoo.vespa.model.container.component.FileStatusHandlerComponent;
 import com.yahoo.vespa.model.container.component.Handler;
@@ -15,7 +15,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -24,23 +23,23 @@ import java.util.stream.Stream;
  * Helper class for http access control.
  *
  * @author gjoranv
+ * @author bjorncs
  */
 public final class AccessControl {
 
     public static final ComponentId ACCESS_CONTROL_CHAIN_ID = ComponentId.fromString("access-control-chain");
 
-    private static final List<String> UNPROTECTED_HANDLERS = ImmutableList.of(
+    public static final List<String> UNPROTECTED_HANDLERS = List.of(
             FileStatusHandlerComponent.CLASS,
             ContainerCluster.APPLICATION_STATUS_HANDLER_CLASS,
             ContainerCluster.BINDINGS_OVERVIEW_HANDLER_CLASS,
             ContainerCluster.STATE_HANDLER_CLASS,
-            ContainerCluster.LOG_HANDLER_CLASS
+            ContainerCluster.LOG_HANDLER_CLASS,
+            ApplicationContainerCluster.METRICS_V2_HANDLER_CLASS
     );
 
     public static final class Builder {
         private String domain;
-        private String applicationId;
-        private Optional<String> vespaDomain = Optional.empty();
         private boolean readEnabled = false;
         private boolean writeEnabled = true;
         private final Set<String> excludeBindings = new LinkedHashSet<>();
@@ -48,9 +47,8 @@ public final class AccessControl {
         private Collection<Servlet> servlets = Collections.emptyList();
         private final DeployLogger logger;
 
-        public Builder(String domain, String applicationId, DeployLogger logger) {
+        public Builder(String domain, DeployLogger logger) {
             this.domain = domain;
-            this.applicationId = applicationId;
             this.logger = logger;
         }
 
@@ -69,52 +67,37 @@ public final class AccessControl {
             return this;
         }
 
-        public Builder vespaDomain(String vespaDomain) {
-            this.vespaDomain = Optional.ofNullable(vespaDomain);
-            return this;
-        }
-
-        public Builder setHandlers(Collection<Handler<?>> handlers) {
-            this.handlers = handlers;
-            return this;
-        }
-
-        public Builder setServlets(Collection<Servlet> servlets) {
-            this.servlets = servlets;
+        public Builder setHandlers(ApplicationContainerCluster cluster) {
+            this.handlers = cluster.getHandlers();
+            this.servlets = cluster.getAllServlets();
             return this;
         }
 
         public AccessControl build() {
-            return new AccessControl(domain, applicationId, writeEnabled, readEnabled,
-                                     excludeBindings, vespaDomain, servlets, handlers, logger);
+            return new AccessControl(domain, writeEnabled, readEnabled,
+                                     excludeBindings, servlets, handlers, logger);
         }
     }
 
     public final String domain;
-    public final String applicationId;
     public final boolean readEnabled;
     public final boolean writeEnabled;
-    public final Optional<String> vespaDomain;
     private final Set<String> excludedBindings;
     private final Collection<Handler<?>> handlers;
     private final Collection<Servlet> servlets;
     private final DeployLogger logger;
 
     private AccessControl(String domain,
-                          String applicationId,
                           boolean writeEnabled,
                           boolean readEnabled,
                           Set<String> excludedBindings,
-                          Optional<String> vespaDomain,
                           Collection<Servlet> servlets,
                           Collection<Handler<?>> handlers,
                           DeployLogger logger) {
         this.domain = domain;
-        this.applicationId = applicationId;
         this.readEnabled = readEnabled;
         this.writeEnabled = writeEnabled;
         this.excludedBindings = Collections.unmodifiableSet(excludedBindings);
-        this.vespaDomain = vespaDomain;
         this.handlers = handlers;
         this.servlets = servlets;
         this.logger = logger;
@@ -123,6 +106,10 @@ public final class AccessControl {
     public List<Binding> getBindings() {
         return Stream.concat(getHandlerBindings(), getServletBindings())
                 .collect(Collectors.toCollection(ArrayList::new));
+    }
+
+    public static boolean hasHandlerThatNeedsProtection(ApplicationContainerCluster cluster) {
+        return cluster.getHandlers().stream().anyMatch(AccessControl::handlerNeedsProtection);
     }
 
     private Stream<Binding> getHandlerBindings() {
@@ -144,7 +131,7 @@ public final class AccessControl {
                 && handler.getServerBindings().stream().noneMatch(excludedBindings::contains);
     }
 
-    public static boolean isBuiltinGetOnly(Handler<?> handler) {
+    private static boolean isBuiltinGetOnly(Handler<?> handler) {
         return UNPROTECTED_HANDLERS.contains(handler.getClassId().getName());
     }
 
@@ -159,4 +146,13 @@ public final class AccessControl {
     private static Stream<String> servletBindings(Servlet servlet) {
         return Stream.of("http://*/").map(protocol -> protocol + servlet.bindingPath);
     }
+
+    private static boolean handlerNeedsProtection(Handler<?> handler) {
+        return ! isBuiltinGetOnly(handler) && hasNonMbusBinding(handler);
+    }
+
+    private static boolean hasNonMbusBinding(Handler<?> handler) {
+        return handler.getServerBindings().stream().anyMatch(binding -> ! binding.startsWith("mbus"));
+    }
+
 }
